--- a/Wholesomeness-client/index.html
+++ b/Wholesomeness-client/index.html
@@ -6,6 +6,7 @@
     <title>The Wholesomeness Application</title>
 </head>
 <body>
+    <script src="src/appContainer.js"></script>
     <script src="src/index.js"></script>
 </body>
 </html>
