start html view

--- a/Wholesomeness-client/index.html
+++ b/Wholesomeness-client/index.html
@@ -6,7 +6,26 @@
     <title>The Wholesomeness Application</title>
 </head>
 <body>
+    <select name="", id="psychological">
+        <option value="">Journaling</option>  
+        <option value="">Chatting</option>        
+    </select>
+
+    <select name="", id="physical">
+        <option value="">Yoga</option>  
+        <option value="">Hiking</option>   
+    </select>
+
+    <select name="", id="Spiritual">
+        <option value="">Praying</option>  
+        <option value=""></option>   
+    </select>
+
+    <button id="createRoutinePractice">Submit</button>
+    <div id="routinePractice"></div>
+    
     <script src="src/appContainer.js"></script>
     <script src="src/index.js"></script>
 </body>
 </html>
+
