add activity to index.html

--- a/Wholesomeness-client/index.html
+++ b/Wholesomeness-client/index.html
@@ -24,6 +24,7 @@
     <button id="createRoutinePractice">Submit</button>
     <div id="routinePractice"></div>
     
+    <script src="src/activity.js"></script>
     <script src="src/appContainer.js"></script>
     <script src="src/index.js"></script>
 </body>
