created labels for index.html

--- a/Wholesomeness-client/index.html
+++ b/Wholesomeness-client/index.html
@@ -6,11 +6,12 @@
     <title>The Wholesomeness Application</title>
 </head>
 <body>
-    <select name="", id="psychological"></select>
-
-    <select name="", id="physical"></select>
-
-    <select name="", id="Spiritual"></select>
+    <label for="psychological">Psychological Activity</label>
+    <select name="", id="psychological"></select><br>
+    <label for="physical">Physical Activity</label>
+    <select name="", id="physical"></select><br>
+    <label for="spiritual">Spiritual Activity</label>
+    <select name="", id="spiritual"></select><br>
 
     <button id="createRoutinePractice">Submit</button>
     <div id="routinePractice"></div>
