--- a/Wholesomeness-client/index.html
+++ b/Wholesomeness-client/index.html
@@ -16,9 +16,9 @@
     <button id="createRoutinePractice">Submit</button>
     <div id="routinePractice"></div>
     
+    <script src="src/routinePractice.js"></script>
     <script src="src/activity.js"></script>
     <script src="src/appContainer.js"></script>
     <script src="src/index.js"></script>
 </body>
 </html>
-
